--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "material-table": "^2.0.3",
     "material-ui-table": "^0.1.2",
     "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
