--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "material-table": "^2.0.3",
     "material-ui-table": "^0.1.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
+    "react-modal-image": "^2.5.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-table": "^7.7.0",
+    "react-to-print": "^2.14.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
